--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node server/server.js",
-    "test": "mocha **/*.test.js",
+    "test": "mocha tests/*.test.js",
     "test-watch": "nodemon --exec \"npm test\""
   },
   "engines": {
